@@ -102,9 +102,9 @@ thriftrw --no-recurse --plugin=yarpc --out=encoding/thrift/thriftrw-plugin-yarpc
 thriftrw --no-recurse --plugin=yarpc --out=encoding/thrift/thriftrw-plugin-yarpc/internal/tests encoding/thrift/thriftrw-plugin-yarpc/internal/tests/atomic.thrift
 thriftrw --no-recurse --plugin="yarpc --sanitize-tchannel" --out=encoding/thrift/thriftrw-plugin-yarpc/internal/tests encoding/thrift/thriftrw-plugin-yarpc/internal/tests/weather.thrift
 
-thriftrw --no-recurse --plugin=yarpcv2 --out=v2/yarpcthrift/thriftrw-plugin-yarpcv2/internal/tests v2/yarpcthrift/thriftrw-plugin-yarpcv2/internal/tests/common.thrift
-thriftrw --no-recurse --plugin=yarpcv2 --out=v2/yarpcthrift/thriftrw-plugin-yarpcv2/internal/tests v2/yarpcthrift/thriftrw-plugin-yarpcv2/internal/tests/atomic.thrift
-thriftrw --no-recurse --plugin="yarpcv2 --sanitize-tchannel" --out=v2/yarpcthrift/thriftrw-plugin-yarpcv2/internal/tests v2/yarpcthrift/thriftrw-plugin-yarpcv2/internal/tests/weather.thrift
+thriftrw --no-recurse --plugin=yarpc2 --out=v2/yarpcthrift/thriftrw-plugin-yarpc2/internal/tests v2/yarpcthrift/thriftrw-plugin-yarpc2/internal/tests/common.thrift
+thriftrw --no-recurse --plugin=yarpc2 --out=v2/yarpcthrift/thriftrw-plugin-yarpc2/internal/tests v2/yarpcthrift/thriftrw-plugin-yarpc2/internal/tests/atomic.thrift
+thriftrw --no-recurse --plugin="yarpc2 --sanitize-tchannel" --out=v2/yarpcthrift/thriftrw-plugin-yarpc2/internal/tests v2/yarpcthrift/thriftrw-plugin-yarpc2/internal/tests/weather.thrift
 
 thrift-gen --generateThrift --outputDir internal/crossdock/thrift/gen-go --inputFile internal/crossdock/thrift/echo.thrift
 thrift-gen --generateThrift --outputDir internal/crossdock/thrift/gen-go --inputFile internal/crossdock/thrift/gauntlet_tchannel.thrift | strip_thrift_warnings
