@@ -25,7 +25,10 @@ type Interface interface {
 
 // New builds a new client for the ReadOnlyStore service.
 //
-//  yarpcClient, _ := yarpc.ClientProvider("readonlystore")
+//  yarpcClient, err := yarpc.Provider.Client("readonlystore")
+//  if err != nil {
+//	  return err
+//  }
 // 	client := readonlystoreclient.New(yarpcClient)
 func New(c yarpc.Client, opts ...yarpcthrift.ClientOption) Interface {
 	return client{
