@@ -40,7 +40,8 @@ Encodings:
 - [x] Drop raw encoding
 - [x] Port JSON encoding
 - [ ] Port Thrift encoding
-      - [ ] Revise/Add comment about final implementation in outbound#Call
+      - [ ] Pull the default routing name from a Thrift annotation.
+      - [ ] Add `sanitization_test.go` in plugin after TChannel is ported.
 - [ ] Port / re-create Protobuf encoding
       - [x] Rewrite the protoc-gen-yarpc-go plugin.
       - [ ] Add end-to-end test that uses gRPC transport with protobuf encoding.
